--- a/styles/styles.css
+++ b/styles/styles.css
@@ -50,8 +50,6 @@ body {
   display: flex;
   justify-content: space-between;
   padding: 0 72px 0 60px;
-  /* outline: 5px solid rgba(255, 99, 78, 0.5);
-  outline-offset: -5px; */
 }
 
 .navigation__list {
@@ -86,11 +84,26 @@ body {
   text-decoration: none;
   position: relative;
   color: black;
-  margin-right: 13px;
+  margin-right: 8px;
   padding: 6px 20px 6px 20px;
-  /* outline: 5px solid rgba(255, 99, 78, 0.5);
-  outline-offset: -5px; */
+  outline: 5px solid rgba(255, 99, 78, 0.5);
+  outline-offset: -5px;
 
+}
+
+.green__circle {
+  position: absolute;
+  width: 19px;
+  height: 19px;
+  top: 0;
+  right: 0;
+  background-color: #7DB54F;
+  border-radius: 50%;
+  font-family: "PT Sans", sans-serif;
+  font-size: 10px;
+  line-height: 13px;
+  color: #FFFFFF;
+  text-align: center;
 }
 
 .navigation__link {
@@ -166,6 +179,9 @@ body {
   fill: #756257;
 }
 
+.navigation__icon-heart {
+  fill: #000000;
+}
 
 .navigation__link-user:focus   {
   fill: #756257;
@@ -621,33 +637,24 @@ body {
   list-style-type: none;
 }
 
-.twitter {
-  padding: 10px;
-
-}
-
-.facebook {
-  padding: 10px;
+.social__link {
   margin: 0;
-}
+  padding: 0;
 
-.youtube {
-  padding: 10px;
-  margin: 0;
 }
 
 .academy {
   margin-left: auto;
   margin-right: 72px;
   margin-bottom: 44px;
-  padding: 0;
+
   outline: none;
 }
 
 .academy__logo {
   /* width: 115px; */
   margin: 4px 0 0 0;
-
+  padding: 10px;
 }
 
 .telephone {
@@ -676,20 +683,23 @@ body {
 }
 
 .telephone:active {
-  color: rgba(117, 98, 87, 1);
+  color: #756257;
 }
 
 .academy__link:hover .academy__icon {
-  fill: rgba(117, 98, 87, 1);
+  fill: #756257;
 }
 
 .academy__link:focus .academy__icon {
-  fill: rgba(117, 98, 87, 1);
+  fill: #756257;
   border: 3px solid #83B3D3;
+  border-radius: 10px;
+
 }
 
 .academy__link:active .academy__icon {
-  fill: rgba(117, 98, 87, 1);
+  fill: #756257;
+  opacity: 0.3;
 }
 
 .academy__link {
@@ -699,6 +709,10 @@ body {
 
 .academy__icon {
   fill: black;
+  padding: 10px;
+  border: 3px solid #FFFFFF;
+  border-radius: 10px;
+  overflow: none;
 }
 
 
@@ -813,16 +827,14 @@ body {
   font-weight: 700;
   color: #FFFFFF;
   width: 150px;
-  margin-left: 71px;
-}
+  margin: 0 0 30px 0;
 
-.hotels__form-infrastructure{
-  margin-left: 71px;
 }
 
 .hotels__infrastructure-list {
-  margin-left: 71px;
   list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 .range__toggle {
@@ -836,6 +848,8 @@ body {
   font-weight: 400;
   color: #FFFFFF;
   width: 150px;
+  margin: 0 0 12px 0;
+  padding: 0 0 0 39px;
 }
 
 .hotels__form-housing {
@@ -845,10 +859,14 @@ body {
   font-weight: 700;
   color: #FFFFFF;
   width: 150px;
+  margin: 0 0 30px 0;
+
 }
 
 .hotels__housing-list {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 .hotels__filter-price {
@@ -925,6 +943,8 @@ body {
   line-height: 23px;
   font-weight: 400;
   color: #FFFFFF;
+  margin: 0 0 13px 0;
+  padding: 0 0 0 39px;
 }
 
 .hotels__found {
@@ -1148,6 +1168,7 @@ body {
 
 .social__icon {
   fill: #83B3D3;
+
 }
 
 .social__icon:hover {
@@ -1161,6 +1182,11 @@ body {
   border-radius: 10px;
 }
 
+
+.social__icon:active {
+  fill: #68A2CA;
+  opacity: 0.3;
+}
 
 
 
@@ -1385,8 +1411,8 @@ body {
 .hotels__search {
   display: flex;
   flex-direction: row;
-  /* outline: 5px solid rgba(255, 99, 78, 0.5);
-  outline-offset: -5px; */
+  margin: 0;
+  padding: 0;
 }
 
 .hotels__form {
@@ -1431,7 +1457,27 @@ body {
   height: 55px;
   border-radius: 4px;
   cursor: pointer;
+  position: relative;
 }
+
+.botton__show-more::after {
+  content: "";
+  position: absolute;
+  border-top: 1px solid #E5E5E5;
+  width: 1056px;
+  top: -28px;
+  left: -215px;
+}
+
+.botton__show-more::before {
+  content: "";
+  position: absolute;
+  border-top: 1px solid #E5E5E5;
+  width: 1056px;
+  top: 90px;
+  left: -215px;
+}
+
 
 /* рассылка на странице с гостиницами */
 
@@ -1605,7 +1651,275 @@ body {
   overflow: hidden;
 }
 
+.hotels__filter-group {
+  margin: 0 100px 0 0;
+  padding: 0;
+  border: 0;
+}
 
+.hotels__form-fieldset {
+  margin: 0 60px 0 0;
+  padding: 0;
+  border: 0;
+}
+
+.control {
+  position: relative;
+  display: block;
+}
+
+/* Mark */
+.control__mark {
+  position: absolute;
+  top: 2px;
+  left: -38px;
+  width: 20px;
+  height: 20px;
+  background-color: #FFFFFF;
+  border-radius: 4px;
+}
+
+.control:hover .control__mark {
+  background: rgba(255, 255, 255, 0.6);
+}
+
+.control:focus .control__mark {
+  background: rgba(255, 255, 255, 0.6);
+  border: 3px solid #83B3D3;
+}
+
+.control:active .control__mark {
+  background: rgba(255, 255, 255, 0.3);
+}
+
+
+.control__input[type="checkbox"]:checked + .control__mark::before {
+  position: absolute;
+  top: 6px;
+  left: 4px;
+  background-image: url(../images/Vector-chek.svg);
+  background-repeat: no-repeat;
+  content: "";
+  width: 12px;
+  height: 10px;
+}
+
+.control__input[type="radio"] + .control__mark {
+  border-radius: 50%;
+}
+
+.control__input[type="radio"]:checked + .control__mark::before {
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  width: 10px;
+  height: 10px;
+  background-color: #3F5E72;
+  border-radius: 50%;
+  content: "";
+}
+
+.hotels__filter-price {
+  margin: 0;
+  padding: 0;
+  border: 0px;
+}
+
+.range__scale {
+  position: relative;
+  width: 287px;
+  height: 4px;
+  margin-bottom: 16px;
+  background-color: rgba(255, 255, 255, 1);
+  margin-top: 32px;
+
+}
+
+.range__bar {
+  position: absolute;
+  height: 4px;
+  background-color: #FFFFFF;
+}
+
+.range__toggle {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  top: -8px;
+  background: #FFFFFF;
+  border-radius: 5px;
+  cursor: pointer;
+  border: 0;
+  outline: none;
+}
+
+.range__toggle:hover {
+  background: #FFFFFF;
+}
+
+.range__toggle:focus {
+  background: #FFFFFF;
+  border: 3px solid #83B3D3;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+}
+
+.range__toggle:active {
+  background: #FFFFFF;
+  border: 3px solid #83B3D3;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+}
+
+.toggle__max {
+  top: -8px;
+  left: 227px;
+}
+
+.toggle__min {
+  top: -8px;
+  left: 0px;
+}
+
+.range__wrapper-inputs {
+  display: flex;
+  justify-content: flex-start;
+  width: 287px;
+  height: 48px;
+  position: relative;
+  border: 2px solid #FFFFFF;
+  box-sizing: border-box;
+  border-radius: 4px;
+}
+
+.range__wrapper-inputs::before{
+  content: "";
+  position: absolute;
+  border-right: 2px solid #FFFFFF;
+  height: 46px;
+  top: 0;
+  left: 143px;
+}
+
+.hotels__price-input {
+  display: flex;
+
+}
+
+.hotels__filter-input {
+  background-color: transparent;
+  border: none;
+  appearance: textfield;
+  font-family: "PT Sans", sans-serif;
+  font-size: 18px;
+  line-height: 23px;
+  font-weight: 400;
+  text-align: start;
+  color: #FFFFFF;
+  width: 143px;
+  height: 48px;
+  padding: 0;
+
+  margin: 0;
+}
+
+.navigation__item-user {
+  position: relative;
+}
+
+.popover {
+  background-color: #FFFFFF;
+  width: 400px;
+  min-height: 232px;
+  position: absolute;
+  border: 1px solid #E6E6E6;
+  box-sizing: border-box;
+  box-shadow: 0px 25px 50px rgba(0, 0, 0, 0.15);
+  border-radius: 20px;
+  top: 40px;
+  right: -170px;
+}
+
+.popover-content {
+  height: 100%;
+
+}
+
+
+
+.popover__favorite-list {
+  list-style-type: none;
+  margin: 0 0 26px 0;
+  padding: 0;
+
+
+}
+
+.popover__favorite-item {
+  grid-template-columns: 25px 48px 17px 244px 66px;
+  grid-template-rows: 28px 24px 24px ;
+  display: grid;
+}
+
+.popover__favorite-img {
+  grid-column: 2 / 3;
+  grid-row: 2 / 4;
+}
+
+
+.popover__favorite-link {
+  text-decoration: none;
+}
+
+.popover__favorite-title {
+  font-family: "PT Sans", sans-serif;
+  font-size: 16px;
+  line-height: 40px;
+  font-weight: 700;
+  text-align: start;
+  color: #000000;
+  grid-column: 4 / 5;
+  grid-row: 1 / 2;
+}
+
+.popover__favorite-decription {
+  font-family: "PT Sans", sans-serif;
+  font-size: 18px;
+  line-height: 40px;
+  font-weight: 400;
+  text-align: start;
+  color: #000000;
+  grid-column: 4 / 5;
+  grid-row: 2 / 3;
+}
+
+.icon__del {
+  fill: #000000;
+  opacity: 0.2;
+  grid-column: 5 / 6;
+  grid-row: 2 / 3;
+}
+
+.popover__favorite-button {
+  font-family: "PT Sans", sans-serif;
+  font-size: 16px;
+  line-height: 21px;
+  font-weight: 700;
+  text-align: center;
+  color: #FFFFFF;
+  text-decoration: none;
+  background: #756257;
+  border-radius: 0px 0px 20px 20px;
+  width: 400px;
+  text-transform: uppercase;
+  width: 400px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+
+
+
+}
 
 /* для обозначения границ
 outline: 5px solid rgba(255, 99, 78, 0.5);
