--- a/styles/styles.css
+++ b/styles/styles.css
@@ -58,16 +58,16 @@ body {
   display: flex;
   margin: 0;
   padding: 19px 0 0 0;
-  /* margin: 0 120px 0 0; */
-  /* padding-top: 19px;
-  padding-left: 0; */
 }
 
 .navigation-user {
   list-style-type: none;
   display: flex;
   margin: 0;
-  padding: 19px 0 0 10px;
+  padding: 0;
+  min-width: 300px;
+  justify-content: flex-end;
+ 
 }
 
 .logo, .logo__sedona {
@@ -84,26 +84,11 @@ body {
   text-decoration: none;
   position: relative;
   color: black;
-  margin-right: 8px;
-  padding: 6px 20px 6px 20px;
-  outline: 5px solid rgba(255, 99, 78, 0.5);
-  outline-offset: -5px;
-
-}
-
-.green__circle {
-  position: absolute;
-  width: 19px;
-  height: 19px;
-  top: 0;
-  right: 0;
-  background-color: #7DB54F;
-  border-radius: 50%;
-  font-family: "PT Sans", sans-serif;
-  font-size: 10px;
-  line-height: 13px;
-  color: #FFFFFF;
-  text-align: center;
+  width: 38px;
+  height: 38px;
+  outline: 5px solid #0000ff;
+  outline-offset: -5px; 
+  display: block;
 }
 
 .navigation__link {
@@ -118,11 +103,6 @@ body {
   position: relative;
 }
 
-.navigation__link-user:last-child {
-  margin-right: 5px ;
-
-}
-
 .navigation__link-button {
   font-family: "PT Sans", sans-serif;
   font-size: 16px;
@@ -133,11 +113,15 @@ body {
   text-transform: uppercase;
   text-decoration: none;
   background-color: #756257;
-  margin: 0 0 0 10px;
+  margin: 0;
   width: 160px;
   height: 37px;
   padding: 9px 35px 9px 37px;
   border-radius: 4px;
+}
+
+.navigation__item-button {
+  margin: 18px 0 0 0;
 }
 
 .navigation__icon {
@@ -150,7 +134,7 @@ body {
 .navigation__icon-hert {
   position: absolute;
   top: 0px;
-  right: 5px;
+  right: 3px;
   fill: #000000;
 }
 
@@ -179,9 +163,6 @@ body {
   fill: #756257;
 }
 
-.navigation__icon-heart {
-  fill: #000000;
-}
 
 .navigation__link-user:focus   {
   fill: #756257;
@@ -191,9 +172,7 @@ body {
   border-radius: 10px;
 }
 
-
 /* коричневые кнопки */
-
 .button:hover {
   background-color: #615048;
 }
@@ -231,10 +210,6 @@ body {
   background-color: #756257;
   content: "";
 }
-
-
-
-
 
 /* main */
 .main__container {
@@ -320,7 +295,6 @@ body {
   text-align: center;
   margin: 0;
   padding: 0;
-
 }
 
 .advantage__description {
@@ -383,7 +357,6 @@ body {
   background-color: #83B3D31F;
   padding: 98px 75px 107px 75px;
   min-width: 250px;
-
 }
 
 .advantage__road {
@@ -427,7 +400,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 98px 90px 77px 90px;
+  padding: 80px 90px 77px 90px;
 }
 
 /* преимущества (вложенный список) */
@@ -439,7 +412,6 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-
 }
 
 .extra__eat {
@@ -478,7 +450,6 @@ body {
   margin: 0;
   padding: 184px 75px 89px 75px;
   min-width: 250px;
-
 }
 
 .extra__item-home::before {
@@ -546,7 +517,6 @@ body {
   color: #333333;
   margin: 0;
   padding: 0;
-
 }
 
 /* поиск гостиницы */
@@ -590,7 +560,6 @@ body {
   max-width: 1200px;
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
   margin: 0px;
   padding: 0;
 }
@@ -622,14 +591,19 @@ body {
 .footer__container {
   display: flex;
   width: 1200px;
+  min-height: 120px;
   margin: 0 auto;
   background-color: #FFFFFF;
-  padding-top: 40px;
+  justify-content: space-between;
+}
+
+.socials {
+  margin: 49px 0 0 72px;
 }
 
 .social__list {
   width: 120px;
-  margin: 0 0 0 60px;
+  margin: 0;
   padding: 0;
   display: flex;
   flex-wrap: wrap;
@@ -640,19 +614,16 @@ body {
 .social__link {
   margin: 0;
   padding: 0;
-
 }
 
 .academy {
-  margin-left: auto;
-  margin-right: 72px;
-  margin-bottom: 44px;
-
+  margin: 0;
   outline: none;
+  outline: 5px solid rgba(255, 99, 78, 0.5);
+  outline-offset: -5px;
 }
 
 .academy__logo {
-  /* width: 115px; */
   margin: 4px 0 0 0;
   padding: 10px;
 }
@@ -667,7 +638,7 @@ body {
   text-decoration: none;
   text-align: center;
   width: 720px;
-  margin: 0px 0 0 40px;
+  /* margin: 0px 0 0 40px; */
   padding: 0;
   outline: none;
 }
@@ -694,7 +665,6 @@ body {
   fill: #756257;
   border: 3px solid #83B3D3;
   border-radius: 10px;
-
 }
 
 .academy__link:active .academy__icon {
@@ -704,7 +674,6 @@ body {
 
 .academy__link {
   outline: none;
-
 }
 
 .academy__icon {
@@ -715,10 +684,7 @@ body {
   overflow: none;
 }
 
-
-
 /* страница гостиницы */
-
 .hotels__background {
   background-image: url(../images/catalog-background\ 1.jpg);
   background-repeat: no-repeat;
@@ -726,15 +692,11 @@ body {
   height: 408px;
   margin-top: -9px;
   padding: 0px 72px 0px 71px;
-  /* outline: 5px solid rgba(255, 99, 78, 0.5);
-  outline-offset: -5px; */
 }
 
 .hotels__header {
   margin: 0 0 50px 0;
   padding: 33px 0 0 0;
-
-
 }
 
 .hotels__header-title {
@@ -745,13 +707,11 @@ body {
   color: #FFFFFF;
   margin: 0;
   padding: 0;
-
 }
 
 .breadcrumbs__item {
   padding: 0;
   margin: 0;
-
 }
 
 .breadcrumbs__link {
@@ -828,7 +788,6 @@ body {
   color: #FFFFFF;
   width: 150px;
   margin: 0 0 30px 0;
-
 }
 
 .hotels__infrastructure-list {
@@ -860,7 +819,6 @@ body {
   color: #FFFFFF;
   width: 150px;
   margin: 0 0 30px 0;
-
 }
 
 .hotels__housing-list {
@@ -1817,13 +1775,26 @@ body {
   width: 143px;
   height: 48px;
   padding: 0;
-
   margin: 0;
 }
 
 .navigation__item-user {
   position: relative;
+  width: 38px;
+  height: 38px;
+  outline: 5px solid rgba(255, 99, 78, 0.5);
+  outline-offset: -5px;
+  margin: 15px 0 0 0;
 }
+
+.navigation__item-user:nth-child(2) {
+  margin: 15px 20px 0 0;
+}
+
+.navigation__item-user:last-child {
+  margin: 0;
+}
+
 
 .popover {
   background-color: #FFFFFF;
@@ -1836,11 +1807,11 @@ body {
   border-radius: 20px;
   top: 40px;
   right: -170px;
+  display: none;
 }
 
 .popover-content {
   height: 100%;
-
 }
 
 
@@ -1849,8 +1820,6 @@ body {
   list-style-type: none;
   margin: 0 0 26px 0;
   padding: 0;
-
-
 }
 
 .popover__favorite-item {
@@ -1915,10 +1884,182 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+}
 
+/* модальное окно */
 
+.modal__container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(242, 242, 242, 0.8);
+}
 
+.modal {
+  position: relative;
+  margin: auto;
+  padding: 62px 70px 70px 70px;
+  background-color: #FFFFFF;
+  box-shadow: 0px 25px 50px rgba(0, 0, 0, 0.15);
+  border-radius: 30px;
+  width: 580px;
+  height: 430px;
+}
 
+.modal__close-button {
+  position: absolute;
+  padding: 0;
+  top: 54px;
+  right: 70px;
+  width: 53px;
+  height: 53px;
+  background-color: #F2F2F2;
+  border-radius: 50%;
+  border: none;
+  background-image: url("../images/close.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  cursor: pointer;
+} 
+
+.modal__title {
+  margin: 0 0 68px 0;
+  font-family: "PT Sans", sans-serif;
+  font-size: 30px;
+  line-height: 40px;
+  font-weight: 700;
+  color: #000000;
+  text-transform: uppercase;
+}
+
+.modal__search-form {
+  display: grid;
+  grid-template-rows: 55px 40px 50px 40px 50px 40px 60px;
+  grid-template-columns: 110px 133px 56px 54px 26px 17px 190px;
+}
+
+.modal__search-arrival {
+  font-family: PT Sans, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 40px;
+  color: #000000;
+  margin: 0;
+  padding: 0;
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+}
+
+.modal__date-arrival {
+  grid-column: 3 / 8;
+  grid-row: 1 / 2;
+}
+
+.modal__description-error {
+  font-family: PT Sans, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 40px;
+  color: #FF5757;
+  margin: 0;
+  padding: 0;
+  grid-column: 3 / 8;
+}
+
+.modal__search-departure {
+  font-family: PT Sans, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 40px;
+  color: #000000;
+  margin: 0;
+  padding: 0;
+  grid-column: 1 / 2;
+  grid-row: 3 / 4;
+}
+
+.modal__date-departure {
+  grid-column: 3 / 8;
+  grid-row: 3 / 4;
+}
+
+.modal__description {
+  font-family: PT Sans, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 40px;
+  color: #000000;
+  margin: 0;
+  padding: 0;
+  grid-row: 4 / 5;
+  grid-column: 3 / 8;
+}
+
+.adults, .adults__number {
+  font-family: PT Sans, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 40px;
+  color: #000000;
+  margin: 0;
+  padding: 0;
+}
+
+.modal__search-adults {
+  grid-column: 1 / 2;
+  grid-row: 5 / 6;
+}
+
+.child, .child__number {
+  font-family: PT Sans, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 40px;
+  color: #000000;
+  margin: 0;
+  padding: 0;
+}
+
+.modal__button {
+  font-family: PT Sans, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 40px;
+  color: #FFFFFF;
+  margin: 0;
+  text-transform: uppercase;
+  background-color: #83B3D3;
+  border-radius: 10px;
+  border: 0;
+  cursor: pointer;
+  grid-column: 1 / 8;
+  grid-row: 7 / 8;
+}
+
+.adults__container {
+  grid-column: 3 / 4;
+}
+
+.child {
+  grid-column: 4 / 5;
+}
+
+.child__info {
+  grid-column: 6 / 7;
+}
+
+.modal__search-child {
+  grid-column: 7 / 8;
 }
 
 /* для обозначения границ
