--- a/styles/styles.css
+++ b/styles/styles.css
@@ -67,7 +67,7 @@ body {
   padding: 0;
   min-width: 300px;
   justify-content: flex-end;
- 
+
 }
 
 .logo, .logo__sedona {
@@ -87,7 +87,7 @@ body {
   width: 38px;
   height: 38px;
   outline: 5px solid #0000ff;
-  outline-offset: -5px; 
+  outline-offset: -5px;
   display: block;
 }
 
@@ -1799,43 +1799,53 @@ body {
 .popover {
   background-color: #FFFFFF;
   width: 400px;
-  min-height: 232px;
+  height: 232px;
   position: absolute;
   border: 1px solid #E6E6E6;
   box-sizing: border-box;
   box-shadow: 0px 25px 50px rgba(0, 0, 0, 0.15);
   border-radius: 20px;
-  top: 40px;
-  right: -170px;
+  top: 47px;
+  right: -179px;
   display: none;
+}
+
+.popover::before {
+  content: "";
+  position: absolute;
+  background-image: url(../images/triangle-white.svg);
+  background-repeat: no-repeat;
+  width: 20px;
+  height: 9px;
+  top: -9px;
+  left: 188px;
 }
 
 .popover-content {
   height: 100%;
 }
 
-
+.popover__favorite-item {
+  position: relative;
+}
 
 .popover__favorite-list {
   list-style-type: none;
-  margin: 0 0 26px 0;
+  margin: 0 0 26px 25px;
   padding: 0;
 }
 
-.popover__favorite-item {
-  grid-template-columns: 25px 48px 17px 244px 66px;
-  grid-template-rows: 28px 24px 24px ;
+.popover__favorite-link {
+  grid-template-columns: 48px 280px;
+  grid-template-rows: 25px 24px 24px;
   display: grid;
+  align-items: center;
+  column-gap: 17px;
 }
 
 .popover__favorite-img {
-  grid-column: 2 / 3;
+  grid-column: 1 / 2;
   grid-row: 2 / 4;
-}
-
-
-.popover__favorite-link {
-  text-decoration: none;
 }
 
 .popover__favorite-title {
@@ -1845,8 +1855,9 @@ body {
   font-weight: 700;
   text-align: start;
   color: #000000;
-  grid-column: 4 / 5;
-  grid-row: 1 / 2;
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+  margin: 0;
 }
 
 .popover__favorite-decription {
@@ -1856,15 +1867,16 @@ body {
   font-weight: 400;
   text-align: start;
   color: #000000;
-  grid-column: 4 / 5;
-  grid-row: 2 / 3;
+  grid-column: 2 / 3;
+  grid-row: 3 / 4;
 }
 
 .icon__del {
   fill: #000000;
   opacity: 0.2;
-  grid-column: 5 / 6;
-  grid-row: 2 / 3;
+  position: absolute;
+  top: 30px;
+  right: 24px;
 }
 
 .popover__favorite-button {
@@ -1879,7 +1891,6 @@ body {
   border-radius: 0px 0px 20px 20px;
   width: 400px;
   text-transform: uppercase;
-  width: 400px;
   height: 60px;
   display: flex;
   justify-content: center;
@@ -1896,6 +1907,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(242, 242, 242, 0.8);
+  display: none;
 }
 
 .modal {
@@ -1913,7 +1925,7 @@ body {
   position: absolute;
   padding: 0;
   top: 54px;
-  right: 70px;
+  right: 72px;
   width: 53px;
   height: 53px;
   background-color: #F2F2F2;
@@ -1923,10 +1935,10 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   cursor: pointer;
-} 
+}
 
 .modal__title {
-  margin: 0 0 68px 0;
+  margin: 0 0 57px 0;
   font-family: "PT Sans", sans-serif;
   font-size: 30px;
   line-height: 40px;
@@ -1937,8 +1949,9 @@ body {
 
 .modal__search-form {
   display: grid;
-  grid-template-rows: 55px 40px 50px 40px 50px 40px 60px;
-  grid-template-columns: 110px 133px 56px 54px 26px 17px 190px;
+  grid-template-columns: 110px 48px 130px 58px 53px 20px 25px 130px;
+  grid-template-rows: 50px 40px 50px 40px 50px 40px 60px;
+  align-items: start;
 }
 
 .modal__search-arrival {
@@ -1952,11 +1965,7 @@ body {
   padding: 0;
   grid-column: 1 / 2;
   grid-row: 1 / 2;
-}
-
-.modal__date-arrival {
-  grid-column: 3 / 8;
-  grid-row: 1 / 2;
+  align-self: center;
 }
 
 .modal__description-error {
@@ -1967,8 +1976,11 @@ body {
   line-height: 40px;
   color: #FF5757;
   margin: 0;
-  padding: 0;
-  grid-column: 3 / 8;
+  padding: -3px;
+  grid-column: 3 / -1;
+  grid-row: 2 / 3;
+  align-self: start;
+  display: block;
 }
 
 .modal__search-departure {
@@ -1982,11 +1994,7 @@ body {
   padding: 0;
   grid-column: 1 / 2;
   grid-row: 3 / 4;
-}
-
-.modal__date-departure {
-  grid-column: 3 / 8;
-  grid-row: 3 / 4;
+  align-self: center;
 }
 
 .modal__description {
@@ -1998,8 +2006,14 @@ body {
   color: #000000;
   margin: 0;
   padding: 0;
+  grid-column: 3 / -1;
   grid-row: 4 / 5;
-  grid-column: 3 / 8;
+}
+
+.adults {
+  grid-column: 1 / 2;
+  grid-row: 5 / 6;
+  align-self: center;
 }
 
 .adults, .adults__number {
@@ -2011,11 +2025,6 @@ body {
   color: #000000;
   margin: 0;
   padding: 0;
-}
-
-.modal__search-adults {
-  grid-column: 1 / 2;
-  grid-row: 5 / 6;
 }
 
 .child, .child__number {
@@ -2042,24 +2051,197 @@ body {
   border-radius: 10px;
   border: 0;
   cursor: pointer;
-  grid-column: 1 / 8;
+  grid-column: 1 / -1;
   grid-row: 7 / 8;
+  height: 60px;
 }
 
-.adults__container {
-  grid-column: 3 / 4;
+.modal__date-arrival {
+  background: #F2F2F2;
+  border-radius: 4px;
+  border: 0;
+  padding: 0 0 0 19px;
+  width: 400px;
+  height: 50px;
+  outline: none;
+  grid-column: 3 / -1;
+  grid-row: 1 / 2;
 }
 
-.child {
-  grid-column: 4 / 5;
+.modal__date-arrival::placeholder {
+  font-family: PT Sans, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 40px;
+  color: #000000;
 }
 
-.child__info {
-  grid-column: 6 / 7;
+.modal__date-departure::placeholder {
+  font-family: PT Sans, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 40px;
+  color: #000000;
+}
+
+.modal__date-departure {
+  font-family: PT Sans, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 40px;
+  color: #000000;
+  background: #F2F2F2;
+  border-radius: 4px;
+  border: 0;
+  padding: 0 0 0 19px;
+  width: 400px;
+  height: 50px;
+  outline: none;
+  grid-column: 3 / -1;
+  grid-row: 3 / 4;
+}
+
+.modal__search-adults {
+  width: 135px;
+  height: 50px;
+  background: #F2F2F2;
+  border-radius: 4px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  grid-column: 3 / 4
+}
+
+.modal__button-minus {
+  display: block;
+  background: transparent;
+  cursor: pointer;
+  border: 0;
+  width: 20px;
+  height: 30px;
+  position: relative;
+}
+
+.modal__button-minus::before {
+  position: absolute;
+  top: 15px;
+  left: 7px;
+  width: 13px;
+  height: 1px;
+  background-color: rgba(0, 0, 0, 1);
+  opacity: 0.3;
+  content: "";
+}
+
+.modal__button-plus {
+  background: transparent;
+  cursor: pointer;
+  display: block;
+  width: 20px;
+  height: 30px;
+  border: 0;
+  position: relative;
+}
+
+.modal__button-plus::before, .modal__button-plus::after {
+  position: absolute;
+  top: 15px;
+  left: 0px;
+  width: 13px;
+  height: 1px;
+  background-color: rgba(0, 0, 0, 1);
+  opacity: 0.3;
+  content: "";
+}
+
+.modal__button-plus::before {
+  transform: rotate(90deg);
+}
+
+.button__child-info {
+  background-color: #83B3D3;
+  width: 25px;
+  height: 25px;
+  color: #FFFFFF;
+  border-radius: 50%;
+  border: 0;
+  cursor: pointer;
 }
 
 .modal__search-child {
-  grid-column: 7 / 8;
+  width: 135px;
+  height: 50px;
+  background: #F2F2F2;
+  border-radius: 4px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  grid-row: 5 / 6;
+  grid-column: 8 / 9;
+  position: relative;
+}
+
+.modal__search-child::before {
+  position: absolute;
+  top: 25px;
+  left: 20px;
+  width: 13px;
+  height: 1px;
+  background-color: rgba(0, 0, 0, 1);
+  opacity: 0.3;
+  content: "";
+}
+
+.child {
+  grid-column: 5 / 6;
+  grid-row: 5 / 6;
+  align-self: center;
+}
+
+.child__description-info {
+  position: relative;
+  grid-column: 6 / 7;
+  grid-row: 5 / 6;
+  align-self: center;
+}
+
+.child__description-conteiner {
+  background: #333333;
+  width: 215px;
+  height: 110px;
+  padding: 19px 18px 18px 21px;
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  z-index: 1;
+  border-radius: 10px;
+  top: 45px;
+  right: -121px;
+  display: none;
+}
+
+.child__description-conteiner::before {
+  content: "";
+  position: absolute;
+  background-image: url(../images/triangle-black.svg);
+  background-repeat: no-repeat;
+  width: 19px;
+  height: 9px;
+  top: -8px;
+}
+
+.child__description {
+  padding: 0;
+  margin: 0;
+  font-family: PT Sans, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  color: #FFFFFF;
 }
 
 /* для обозначения границ
