--- a/styles/styles.css
+++ b/styles/styles.css
@@ -71,7 +71,7 @@ body {
 }
 
 .logo, .logo__sedona {
-  margin: 0 23px 0 0;
+  margin: 0 23px 0 10px;
   padding: 0;
   outline: none;
 }
@@ -86,8 +86,6 @@ body {
   color: black;
   width: 38px;
   height: 38px;
-  outline: 5px solid #0000ff;
-  outline-offset: -5px;
   display: block;
 }
 
@@ -138,6 +136,16 @@ body {
   fill: #000000;
 }
 
+.navigation__icon-hert:hover {
+  
+  fill: #756257;
+}
+
+.navigation__icon-hert:active {
+  fill: #756257;
+  opacity: 0.3;
+}
+
 /* состояния ссылок навигации */
 .navigation__link:hover {
   color: #756257;
@@ -153,16 +161,21 @@ body {
 
 .navigation__link:active {
   color: #756257;
+  opacity: 0.3;
 }
 
 .navigation__link-user:hover .navigation__icon {
   fill: #756257;
 }
 
-.navigation__link-user:hover .navigation__icon-heart {
+.navigation__link-user:hover {
   fill: #756257;
 }
 
+.navigation__link-user:active {
+  color: #756257;
+  opacity: 0.3;
+}
 
 .navigation__link-user:focus   {
   fill: #756257;
@@ -187,7 +200,7 @@ body {
 
 .button:active {
   background-color: #615048;
-  color: #756257;
+  opacity: 0.3;
 }
 
 .navigation__link-active::before {
@@ -597,30 +610,59 @@ body {
   justify-content: space-between;
 }
 
+/* соцсети */
 .socials {
-  margin: 49px 0 0 72px;
+  margin: 38px 0 0 60px;
 }
 
 .social__list {
-  width: 120px;
   margin: 0;
   padding: 0;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
   list-style-type: none;
 }
 
 .social__link {
-  margin: 0;
-  padding: 0;
+  display: flex;
+  width: 40px;
+  height: 40px;
+  outline: none;
+}
+
+.button__social {
+  margin: 0 30px 0 0;
+  padding: 0 0 0 0; 
+  width: 15px;
+  height: 15px;
+}
+
+.social__icon {
+  fill: #83B3D3;
+  margin: auto;
+  border: 2px solid #FFFFFF;
+}
+
+.social__icon:hover {
+  fill: #68A2CA;
+}
+
+.social__link:focus {
+  fill: #68A2CA;
+  border: 3px solid #83B3D3;
+  box-sizing: border-box;
+  border-radius: 10px;
+  outline-offset: -5px; 
+}
+
+.social__icon:active {
+  fill: #68A2CA;
+  opacity: 0.3;
 }
 
 .academy {
-  margin: 0;
+  margin: 30px 60px 10px auto;
   outline: none;
-  outline: 5px solid rgba(255, 99, 78, 0.5);
-  outline-offset: -5px;
 }
 
 .academy__logo {
@@ -638,7 +680,7 @@ body {
   text-decoration: none;
   text-align: center;
   width: 720px;
-  /* margin: 0px 0 0 40px; */
+  margin: 40px 0 0 30px;
   padding: 0;
   outline: none;
 }
@@ -1124,27 +1166,7 @@ body {
   border: 2px solid #FF5757;
 }
 
-.social__icon {
-  fill: #83B3D3;
 
-}
-
-.social__icon:hover {
-  fill: #68A2CA;
-}
-
-.social__icon:focus {
-  fill: #68A2CA;
-  border: 3px solid #83B3D3;
-  box-sizing: border-box;
-  border-radius: 10px;
-}
-
-
-.social__icon:active {
-  fill: #68A2CA;
-  opacity: 0.3;
-}
 
 
 
@@ -1176,14 +1198,13 @@ body {
   border: 3px solid #756257;
 }
 
-.button-blue:active {
-  color: #83B3D333;
+.mailing__button:active {
+  color: #68A2CA;
+  opacity: 0.6;
 }
 
 
-.button__social {
-  margin-right: 0px;
-}
+
 
 .button__apply {
   font-family: "PT Sans", sans-serif;
@@ -1782,8 +1803,6 @@ body {
   position: relative;
   width: 38px;
   height: 38px;
-  outline: 5px solid rgba(255, 99, 78, 0.5);
-  outline-offset: -5px;
   margin: 15px 0 0 0;
 }
 
@@ -1836,12 +1855,28 @@ body {
 }
 
 .popover__favorite-link {
-  grid-template-columns: 48px 280px;
+  grid-template-columns: 48px 250px;
   grid-template-rows: 25px 24px 24px;
   display: grid;
   align-items: center;
   column-gap: 17px;
+  cursor: pointer;
+  width: 290px;
 }
+
+.popover__favorite-link:hover {
+  opacity: 0.6;
+}
+
+.popover__favorite-link:focus {
+  border: 3px solid #83B3D3;
+  border-radius: 10px;
+}
+
+.popover__favorite-link:active {
+  opacity: 0.3;
+}
+
 
 .popover__favorite-img {
   grid-column: 1 / 2;
@@ -1877,6 +1912,22 @@ body {
   position: absolute;
   top: 30px;
   right: 24px;
+  cursor: pointer;
+  padding: 10px;
+  border: 3px solid #FFFFFf;
+  border-radius: 10px;
+}
+
+.icon__del:hover {
+  fill: #000000;
+  opacity: 1;
+}
+
+.icon__del:focus {
+  fill: #000000;
+  opacity: 1;
+  border: 3px solid #83B3D3;
+  border-radius: 10px;
 }
 
 .popover__favorite-button {
@@ -1907,7 +1958,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(242, 242, 242, 0.8);
-  display: none;
+  /* display: none; */
 }
 
 .modal {
@@ -1935,6 +1986,21 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   cursor: pointer;
+  outline: none;
+}
+
+.modal__close-button:hover {
+  background-color: #E6E6E6;
+}
+
+.modal__close-button:focus {
+  background-color: #E6E6E6;
+  border: 3px solid #83B3D3;
+}
+
+.modal__close-button:active {
+  background-color: #E6E6E6;
+  opacity: 0.3;
 }
 
 .modal__title {
@@ -2068,6 +2134,16 @@ body {
   grid-row: 1 / 2;
 }
 
+.modal__date-arrival:hover {
+  background-color: #E6E6E6;
+}
+
+.modal__date-arrival:focus {
+  background-color: #E6E6E6;
+  border: 3px solid #83B3D3;
+  border-radius: 4px;
+}
+
 .modal__date-arrival::placeholder {
   font-family: PT Sans, sans-serif;
   font-style: normal;
@@ -2075,6 +2151,13 @@ body {
   font-size: 18px;
   line-height: 40px;
   color: #000000;
+}
+
+.modal__date-arrival:active {
+  background: #FFFFFF;
+  border: 2px solid #000000;
+  box-sizing: border-box;
+  border-radius: 4px;
 }
 
 .modal__date-departure::placeholder {
@@ -2104,6 +2187,23 @@ body {
   grid-row: 3 / 4;
 }
 
+.modal__date-departure:hover {
+  background-color: #E6E6E6;
+}
+
+.modal__date-departure:focus {
+  background-color: #E6E6E6;
+  border: 3px solid #83B3D3;
+  border-radius: 4px;
+}
+
+.modal__date-departure:active {
+  background: #FFFFFF;
+  border: 2px solid #000000;
+  box-sizing: border-box;
+  border-radius: 4px;
+}
+
 .modal__search-adults {
   width: 135px;
   height: 50px;
@@ -2119,10 +2219,15 @@ body {
   display: block;
   background: transparent;
   cursor: pointer;
-  border: 0;
+  border: 0 solid #000000;
   width: 20px;
   height: 30px;
   position: relative;
+}
+
+.modal__button-minus:hover {
+  background: #000000;
+
 }
 
 .modal__button-minus::before {
